--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,19 +44,17 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      - name: Get project version
-        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
       - name: 'Run az commands to deploy container'
         run: |
           az container create \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --name posts \
-            --image ${{ secrets.DOCKERHUB_USERNAME }}/posts:latest \
+            --image ${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ env.VERSION }} \
             --registry-login-server index.docker.io \
             --registry-username ${{ secrets.DOCKERHUB_USERNAME }} \
             --registry-password ${{ secrets.DOCKERHUB_READ_TOKEN }} \
             --dns-name-label posts-${{ secrets.DOCKERHUB_USERNAME }} \
             --ports 8080 \
-            --os-type Windows \
+            --os-type Linux \
             --cpu 1 \
             --memory 1.5 \
